tests/ui/basic/tuple_size_mismatch.rs
use metamatch::eval;

fn main() {
    eval! {
        let (a, b, c) = (1, 2);
    };
}
